--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.51.2",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
